string adition, lang refactor and 3 reserved words

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use o IntelliSense para saber mais sobre os atributos possíveis.
-    // Focalizar para exibir as descrições dos atributos existentes.
-    // Para obter mais informações, acesse: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -13,9 +10,9 @@
         },
         {
             "type": "java",
-            "name": "Compilador",
+            "name": "Compiler",
             "request": "launch",
-            "mainClass": "Compilador",
+            "mainClass": "Compiler",
             "projectName": "projetocompilador_bee90034"
         }
     ]
